# generic_example

./: .gitignore  README.md
rp_pico/bme280/arduino/: example.ino
rp_pico/bme280/cmake/: example.cpp
rp_pico/test/hello_world/hello_world_a/: hello_world_a.ino
rp_pico/test/hello_world/hello_world_s/: CMakeLists.txt  hello_world_s.cpp
rp_pico/test/hello_world/sdk/: CMakeLists.txt  hello_world_s.cpp
rp_pico/transmission/i2c/i2c/i2c_a/: i2c_a.hpp
rp_pico/transmission/i2c/i2c/i2c_s/: CMakeLists.txt  i2c_master_write_s.cpp  i2c_s.cpp  i2c_s.hpp
rp_pico/transmission/i2c/i2c_master_read/i2c_master_read_a/: i2c_master_read_a.ino
rp_pico/transmission/i2c/i2c_master_read/i2c_master_read_s/: i2c_master_read_s.cpp  i2c_s.cpp
rp_pico/transmission/i2c/i2c_master_write/i2c_master_write_a/: i2c_a.hpp  i2c_master_write_a.ino
rp_pico/transmission/i2c/i2c_master_write/i2c_master_write_s/: CMakeLists.txt  i2c_master_write_s.cpp
rp_pico/transmission/i2c/i2c_slave/i2c_slave_a/: slave_a.ino
rp_pico/transmission/i2c/i2c_slave/i2c_slave_s/: CMakeLists.txt  i2c_slave_s.cpp
rp_pico/transmission/i2c/i2c_test/: i2c_tezt.cpp
rp_pico/transmission/i2c/master/sdk/: CMakeLists.txt  master_s.cpp
rp_pico/transmission/i2c/master_read/arduino/: i2c_master_read_a.ino
rp_pico/transmission/i2c/master_read/cmake/: CMakeLists.txt  master_read_c.cpp
rp_pico/transmission/i2c/master_read/sdk/: CMakeLists.txt  i2c_master_read_s.cpp
rp_pico/transmission/i2c/master_write/arduino/: i2c_master_a.ino
rp_pico/transmission/i2c/master_write/cmake/: CMakeLists.txt  master_write_c.cpp
rp_pico/transmission/i2c/master_write/sdk/: CMakeLists.txt  i2c_master_write_s.cpp  master_write_s.cpp
rp_pico/transmission/i2c/read/cmake/: CMakeLists.txt  read_c.cpp
rp_pico/transmission/i2c/slave/arduino/: slave_a.ino
rp_pico/transmission/i2c/slave/sdk/: CMakeLists.txt  i2c_slave_s.cpp  slave_s.cpp
rp_pico/transmission/i2c_fnc/i2c_master_read/i2c_master_read_a/: i2c_a.cpp  i2c_master_read_a.ino
rp_pico/transmission/i2c_fnc/i2c_master_read/i2c_master_read_s/: CMakeLists.txt  i2c_master_read_s.cpp  i2c_s.hpp
rp_pico/transmission/i2c_fnc/i2c_master_write/i2c_master_write_a/: i2c_master_write_a.ino
rp_pico/transmission/i2c_fnc/i2c_master_write/i2c_master_write_s/: i2c_master_write_s.cpp
scXX_s_sample/: scXX_s.cpp  scXX_s.hpp
sc_project_old/: CMakeLists.txt  bme280_s.cpp  bme280_s.hpp  communication_s.hpp  exception_s.hpp  i2c_s.cpp  i2c_s.hpp  main_example_s.cpp
sc_project_old/sc/: CMakeLists.txt  bme280.cpp  bme280.hpp  sc.cpp  sc.hpp
(+2 files in other folders)
